--- a/NajboljiHrvati.html
+++ b/NajboljiHrvati.html
@@ -27,6 +27,7 @@
     </div>
 
     <img src="https://proleksis.lzmk.hr/slike1/x_h0048.JPG" style="width: 45%;" class="hrzastava"/>
+    <p class="dolje">HNS family©</p>
 
 
 </body>
