--- a/riznica.html
+++ b/riznica.html
@@ -14,5 +14,6 @@
     <h2>Uspomene</h2>
     <img class="hr2018" src="https://hns.family/files/images/_resized/0000024368_1280_600_cut.jpg" style="width: 50%;"/>
     <img class="hr2018" src="https://hns.family/files/images/crops/0001/1197_crop3.jpg" style="width: 25%;"/>
+    <p class="dolje">HNS family©</p>
 </body>
 </html>
