--- a/ulaznice.html
+++ b/ulaznice.html
@@ -13,6 +13,7 @@
     <h2>Aktualno izvan nogometa</h2>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRluLzbyRMuAx9GBmucOD8ZwnX2IGnaVbAQLA&s" style="width: 15%;" class="ulaznicesl"/>
     <p class="tj">Profesor Tomisalv Jakupić izabran za najboljeg profesora Hrvatske(Dao mi ocjenu 5)</p>
+    <p class="dolje">HNS family©</p>
 
 </body>
 </html>
