--- a/vijest2.html
+++ b/vijest2.html
@@ -5,9 +5,10 @@
 </head>
 <body>
     <h1 class="vijesti">Vijesti</h1>
-    <img src="2D87CC47-99AD-43AD-ABE9-672DB3C72BA3.JPEG" style="width: 25%;"/>
-    <p class="kontakt">Dana 25.10.2024 dodjeljena je zlatna lopta najbboljem igraču svijeta 2024/25 godine.<br>
-    Dino Ivančić: Hvala vam na ovoj nagradi, puno mi znači. Zahvalio bi svojim roditeljima, ekipi i najviše Bogu. Uz puno truda i rada me sve nagradilo. Još jedanput hvala svima!!</p>
+    <img src="E4D992BA-DAC7-42AF-AA53-9EFD30C79B84.JPEG" style="width: 20%;"/>
+    <p class="kontakt">Matias Furjan i Matej Baranić igrači sezone.<br>
+    Matias Furjan: Prvo bih se zahvalio ekipi i trenerima što su mi sve omogućili. Bez njih nebi ništa bilo moguće, hvala.<br>Matej Baranić: Slažem se s Matiasom, hvala vam na podršci i ovoj godini. </p>
+    <p class="Rudar">Iznad svih Rudar!!!!</p>
     <p class="dolje">HNS family©</p>
 </body>
 </html>
