--- a/vijest3.html
+++ b/vijest3.html
@@ -6,7 +6,7 @@
 <body>
     <h1 class="vijesti">Vijesti</h1>
     <img src="FD6C18AE-82F3-473F-947E-30F585048D6F.JPEG" style="width: 25%;"/>
-    <p class="kontakt">Matias Furjan i Matej Baranić igrači sezone.<br>
+    <p class="kontakt">Filip Takač golman sezone.<br>
     Filip Takač: Hvala svima za ovu nagradu. Nadam se da ću iduće godine jaće nastavit i osvojiti još jednu nagaradu, još jednom hvala </p>
     <p class="dolje">HNS family©</p>
 </body>
