--- a/ulaznice.html
+++ b/ulaznice.html
@@ -11,7 +11,7 @@
         Prodaja i distribucija ulaznica za svaku od pojedinih utakmica u načelu počinje 20-30 dana prije same utakmice.</p>
     
     <h2>Aktualno izvan nogometa</h2>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRluLzbyRMuAx9GBmucOD8ZwnX2IGnaVbAQLA&s" style="width: 15%;" class="ulaznicesl"/>
+    <img src="https://dov.hr/sites/default/files/styles/big_image/public/slike/2024-08/DOV%20Prisega%2006022023%202.jpg?itok=CNMgH-3h" style="width: 25%;" class="ulaznicesl"/>
     <p class="tj">Profesor Tomisalv Jakupić izabran za najboljeg profesora Hrvatske(Dao mi ocjenu 5)</p>
     <p class="dolje">HNS family©</p>
 
