--- a/indeks.html
+++ b/indeks.html
@@ -12,6 +12,7 @@
         <a class="Home" href="riznica.html">HNS Riznica</a>
         <a href="ulaznice.html">Ulaznice</a>
         <a href="NajboljiHrvati.html">Najbolji igrači Hrvatske</a>  
+        <a href="povratnainformacija.html">Povratna Informacija</a>
     </div>
 
     <h1 class="vijesti">Vijesti</h1>
